added LPML stuff

--- a/runs/sim-study/notes/test-sim-6-5-1/test-sim-6-5-1.tex
+++ b/runs/sim-study/notes/test-sim-6-5-1/test-sim-6-5-1.tex
@@ -138,6 +138,20 @@ different $K$ (5, 6, 7, 8, 15). Recall that $K^\true=7$ and $R^\true = (6, 5)$.
 
 \begin{figure}[h]
   \begin{center}
+    \begin{tabular}{ccc}
+      \includegraphics[scale=.3]{img/test-sim-6-5-1/seed_1/scale_0/metrics/LPML.pdf} &
+      \includegraphics[scale=.3]{img/test-sim-6-5-1/seed_1/scale_1/metrics/LPML.pdf} &
+      \includegraphics[scale=.3]{img/test-sim-6-5-1/seed_1/scale_10/metrics/LPML.pdf} \\
+      (a) $\phi=0$ & (b) $\phi=1$ & (c) $\phi=10$ \\
+    \end{tabular}
+  \end{center}
+  \label{fig:lpml}
+  \caption{LPML for various $K_\text{MCMC}$ and $\phi$ for simulation data 1.}
+\end{figure}
+
+
+\begin{figure}[h]
+  \begin{center}
     \includegraphics[scale=.5]{img/test-sim-6-5-1/metrics/seed_1/R.pdf}
   \end{center}
   \label{fig:R-post}
