need to finish report ...

--- a/runs/sim-study/notes/test-sim-6-5-2/test-sim-6-5-2.tex
+++ b/runs/sim-study/notes/test-sim-6-5-2/test-sim-6-5-2.tex
@@ -66,34 +66,33 @@
 \maketitle
 
 % \tableofcontents \newpage % Comment to remove table of contents
-% bla kjhsdsa
 
-\section{Objective}\label{sec:objective}
-TODO
+% \section{Objective}\label{sec:objective}
+% TODO
 
 \section{Data Generation}\label{sec:data-generation}
 Figure~\ref{fig:Z-true} and Figure~\ref{tab:W-true} respectively show the true
-$Z$ and $W$ used to generate the simulated data in this study. Notice that 
+$Z$ and $W$ used to generate the simulated data in this study. Note the following:
 \begin{itemize}
-  \item features (columns) 1, 2, and 3 are similar (maximum difference of 2).
+  \item Features (columns) 1, 2, and 3 are similar (maximum difference of 2).
     In Sample 1, where the first two features are rare / absent in one
     sample, and the third feature is abundant in both samples. We want to know
     if the first two features are prone to being absorbed into feature 3.
-  \item features 4 and 5 are similar (difference of 1). They are rare / absent
+  \item Features 4 and 5 are similar (difference of 1). They are rare / absent
     in one sample and abundant in another. We are also curious if these two 
     features will be merged. Although, we don't expect them to. It is conceivable
     that they will only be ``selected'' in one sample, but not in another.
-  \item feature 6 is abundant in Sample 1 but not in Sample 2. We expect it to be
+  \item Feature 6 is abundant in Sample 1 but not in Sample 2. We expect it to be
     recovered in $Z$ but it is conceivable that it will not be ``selected'' in sample
     2. It is distinct from other features.
-  \item feature 7 is rare in Sample 1, and absent in Sample 2. Nevertheless, we
+  \item Feature 7 is rare in Sample 1, and absent in Sample 2. Nevertheless, we
     expect it to recovered in $Z$ because it is different from the other
     features.
 \end{itemize}
 
 \begin{figure}[H]
   \begin{center}  % 6 x 5
-    \includegraphics[scale=.3]{\imgdir/dataseed_1/mcmcseed_1/scale_0/img/Z_true.pdf}
+    \includegraphics[scale=.4]{\imgdir/dataseed_1/mcmcseed_1/scale_0/img/Z_true.pdf}
   \end{center}
   \caption{$Z^\true$}
   \label{fig:Z-true}
@@ -102,13 +101,14 @@ $Z$ and $W$ used to generate the simulated data in this study. Notice that
 % latex table generated in R 3.4.4 by xtable 1.8-3 package
 % Wed Feb 12 14:53:27 2020
 \begin{table}[ht]
+  \Large
   \centering
   \begin{tabular}{rrrrrrrr}
     \hline
     & $k=1$ & $k=2$ & $k=3$ & $k=4$ & $k=5$ & $k=6$ & $k=7$ \\
     \hline
-    1 & 0.04 & 0.05 & 0.39 & 0.00 & 0.06 & 0.43 & 0.03 \\
-    2 & 0.00 & 0.05 & 0.54 & 0.20 & 0.14 & 0.07 & 0.00 \\
+    Sample 1 & 0.04 & 0.05 & 0.39 & 0.00 & 0.06 & 0.43 & 0.03 \\
+    Sample 2 & 0.00 & 0.05 & 0.54 & 0.20 & 0.14 & 0.07 & 0.00 \\
     \hline
   \end{tabular}
   \caption{$W^\true$}
@@ -184,6 +184,14 @@ $Z$ and $W$ used to generate the simulated data in this study. Notice that
 \begin{figure}[H]
   \begin{center}  % 6 x 5
     \imgtemplate{W.pdf}{.2}
+  \end{center}
+\end{figure}
+
+\newpage
+\section{Posterior distribution of $v$}
+\begin{figure}[H]
+  \begin{center}  % 6 x 5
+    \imgtemplate{v.pdf}{.2}
   \end{center}
 \end{figure}
 
