--- a/runs/sim-study/notes/test-sim-6-5-2/test-sim-6-5-2.tex
+++ b/runs/sim-study/notes/test-sim-6-5-2/test-sim-6-5-2.tex
@@ -294,6 +294,58 @@ More on data generation / MCMC setup:
   \label{fig:dd22}
 \end{figure}
 
+\newpage
+\section{Metrics}
+% latex table generated in R 3.4.4 by xtable 1.8-3 package
+% Thu Feb 13 22:57:36 2020
+\begin{table}[H]
+\centering
+\begin{tabular}{rrrrrrrrrrr}
+  \hline
+  \rule{0pt}{2.6ex}
+  Data & MCMC & $\phi$ & DIC & LPML & $\hat{R}_1$ & $\hat{R}_2$ & $R_1 (2.5\%)$ & $R_2 (2.5\%)$ & $R_1 (97.5\%)$ & $R_2 (97.5\%)$\\
+  \hline
+  1 &   1 &   0 & -454846.68 & -12.97 & 6.93 & 6.00 & 6.00 & 6.00 & 7.00 & 6.00 \\
+  1 &   1 &   1 & -454987.85 & -12.95 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  1 &   1 &  10 & -454700.04 & -12.95 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  \hline                                            
+  1 &   2 &   0 & -358292.48 & -13.40 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  1 &   2 &   1 & -454625.62 & -12.92 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  1 &   2 &  10 & -454713.30 & -12.93 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  \hline                                            
+  1 &   3 &   0 & -454656.20 & -12.98 & 6.93 & 6.00 & 6.00 & 6.00 & 7.00 & 6.00 \\
+  1 &   3 &   1 & -385793.48 & -13.41 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 \\
+  1 &   3 &  10 & -386102.49 & -13.44 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 \\
+  \hline                                            
+  \hline                                            
+  2 &   1 &   0 & -382386.80 & -13.23 & 6.93 & 5.98 & 6.00 & 6.00 & 7.00 & 6.00 \\
+  2 &   1 &   1 & -382471.59 & -13.26 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  2 &   1 &  10 & -372856.10 & -13.67 & 5.85 & 5.00 & 5.00 & 5.00 & 6.00 & 5.00 \\
+  \hline                                            
+  2 &   2 &   0 & -382604.40 & -13.22 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  2 &   2 &   1 & -382830.00 & -13.23 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  2 &   2 &  10 & -382426.58 & -13.24 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  \hline                                            
+  2 &   3 &   0 & -382570.63 & -13.22 & 6.91 & 6.00 & 6.00 & 6.00 & 7.00 & 6.00 \\
+  2 &   3 &   1 & -382393.45 & -13.25 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  2 &   3 &  10 & -367326.52 & -13.68 & 5.76 & 5.00 & 5.00 & 5.00 & 6.00 & 5.00 \\
+  \hline                                            
+  \hline                                            
+  3 &   1 &   0 & -456420.34 & -12.85 & 6.96 & 5.99 & 6.00 & 6.00 & 7.00 & 6.00 \\
+  3 &   1 &   1 & -457004.33 & -12.86 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  3 &   1 &  10 & -456787.63 & -12.81 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  \hline                                            
+  3 &   2 &   0 & -456751.40 & -12.84 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  3 &   2 &   1 & -456254.13 & -12.82 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  3 &   2 &  10 & -390085.06 & -13.34 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 \\
+  \hline                                            
+  3 &   3 &   0 & -456246.13 & -12.81 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  3 &   3 &   1 & -429226.36 & -13.18 & 5.62 & 5.00 & 5.00 & 5.00 & 6.00 & 5.00 \\
+  3 &   3 &  10 & -390532.99 & -13.31 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 \\
+  \hline
+\end{tabular}
+\end{table}
+
 
 % Uncomment if using bibliography:
 % \bibliography{bib}
