--- a/runs/sim-study/notes/test-sim-6-6/test-sim-6-6.tex
+++ b/runs/sim-study/notes/test-sim-6-6/test-sim-6-6.tex
@@ -21,11 +21,13 @@
 % Distributions
 \newcommand{\Normal}{ \text{Normal} }
 \newcommand{\Beta}{ \text{Beta} }
-\newcommand{\G}{ \text{Gamma} }
+\newcommand{\Gam}{ \text{Gamma} }
 \newcommand{\InvGamma}{ \text{Inv-Gamma} }
 \newcommand{\Uniform}{ \text{Uniform} }
+\def\Dir{\text{Dirichlet}}
+\def\TN{\text{TN}}
 % Statistics
-\newcommand{\E}{ \text{E} }
+\newcommand{\E}{\text{E}}
 \newcommand{\iid}{\overset{iid}{\sim}}
 \newcommand{\ind}{\overset{ind}{\sim}}
 
@@ -56,7 +58,7 @@
 \input{imgtemplate.tex}
 
 % Title Settings
-\title{Simulation Study 6.5.2}
+\title{Simulation Study 6.6}
 \author{Arthur Lui}
 \date{\today} % \date{} to set date to empty
 
@@ -71,17 +73,26 @@
 % TODO
 
 \section{Data Generation}\label{sec:data-generation}
-Figure~\ref{fig:Z-true} and Figure~\ref{tab:W-true} respectively show the true
+Figure~\ref{fig:Z-true} and Table~\ref{tab:W-true} respectively show the true
 $Z$ and $W$ used to generate the simulated data in this study. Note the following:
 \begin{itemize}
   \item Features (columns) 1, 2, and 3 are similar (maximum difference of 2).
-    In Sample 1, where the first two features are rare / absent in one
-    sample, and the third feature is abundant in both samples. We want to know
-    if the first two features are prone to being absorbed into feature 3.
+    In Sample 1, the first two features are rare / absent in one sample, and
+    the third feature is abundant in both samples. Previously, we wanted to
+    know if the first two features are prone to being absorbed into feature 3. We
+    found that using the prior $w^\star_{i,k} \sim \Gam(10, 1)$, and using priors
+    that encouraged $r_{i,k}$ to be sparse, Features 1 and 2 tend to merge
+    (into Feature 2, which is slightly larger), and Feature 3 would be in its
+    own cluster or split into two smaller identical features. We believe this is 
+    due to prior information in $w^\star$ encouraging features to be equally weighted.
+    In this study, we continue to monitor these kinds of behaviour.
   \item Features 4 and 5 are similar (difference of 1). They are rare / absent
-    in one sample and abundant in another. We are also curious if these two 
-    features will be merged. Although, we don't expect them to. It is conceivable
-    that they will only be ``selected'' in one sample, but not in another.
+    in one sample and abundant in another. Previously, we were also curious if
+    these two features will be merged. Although, we didn't expect them to. It was
+    conceivable that they will only be ``selected'' in one sample, but not in
+    another. We found that they were always recovered, in part, we believe, because
+    they had a large presence in one sample. We continue to monitor their behaviour
+    here.
   \item Feature 6 is abundant in Sample 1 but not in Sample 2. We expect it to be
     recovered in $Z$ but it is conceivable that it will not be ``selected'' in sample
     2. It is distinct from other features.
@@ -114,14 +125,23 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \label{tab:W-true}
 \end{table}
 
-More on data generation / MCMC setup:
+\subsection{More on data generation / MCMC setup}
 \begin{itemize}
-  \item $\mu^{\star,\true}=(-2, 2)$, $\sigma^{2,\true}_i=0.5$, $N=(1000, 1000)$
+  \item $\mu^{\star,\true}=(-2, 2)$, $\sigma^{2,\true}_i=0.5$, $N=(2000, 2000)$
   \item 10000 burn-in, followed by 4000 iterations, and every other sample was
     kept (2000 samples total).
   \item Three datasets were generated using the true parameters. Three MCMC runs using 
     different random seeds were done. For each run, $\phi$ was set at (0, 1, 10). There
     are a total of 27 runs.
+  \item \textbf{Some Priors:}
+  \begin{itemize}
+    \item $w^\star_{i,k} \sim \Gam(\text{shape}=10, \text{rate}=1)$
+    \item $\eta_{z, i,j,\ell} \sim \Dir_{L_z}(5)$
+    \item $\alpha \sim \Gam(0.1, 0.1)$
+    \item $\delta_0 \sim \TN^-(1.0, 0.1)$
+    \item $\delta_1 \sim \TN^+(1.0, 0.1)$
+    \item $\sigma^2_i \sim \InvGamma^+(1.0, 0.1)$
+  \end{itemize}
 \end{itemize}
 
 \newpage
@@ -300,48 +320,46 @@ More on data generation / MCMC setup:
 % Thu Feb 13 22:57:36 2020
 \begin{table}[H]
 \centering
-\begin{tabular}{rrrrrrrrrrr}
+\begin{tabular}{crrrrrrrrrrr}
   \hline
   \rule{0pt}{2.6ex}
-  Data & MCMC & $\phi$ & DIC & LPML & $\hat{R}_1$ & $\hat{R}_2$ & $R_1 (2.5\%)$ & $R_2 (2.5\%)$ & $R_1 (97.5\%)$ & $R_2 (97.5\%)$\\
+  & Data & MCMC & $\phi$ & DIC & LPML & $\hat{R}_1$ & $\hat{R}_2$ & $R_1 (2.5\%)$ & $R_2 (2.5\%)$ & $R_1 (97.5\%)$ & $R_2 (97.5\%)$\\
   \hline
-  1 &   1 &   0 & -454846.68 & -12.97 & 6.93 & 6.00 & 6.00 & 6.00 & 7.00 & 6.00 \\
-  1 &   1 &   1 & -454987.85 & -12.95 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
-  1 &   1 &  10 & -454700.04 & -12.95 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
-  \hline                                            
-  1 &   2 &   0 & -358292.48 & -13.40 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
-  1 &   2 &   1 & -454625.62 & -12.92 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
-  1 &   2 &  10 & -454713.30 & -12.93 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
-  \hline                                            
-  1 &   3 &   0 & -454656.20 & -12.98 & 6.93 & 6.00 & 6.00 & 6.00 & 7.00 & 6.00 \\
-  1 &   3 &   1 & -385793.48 & -13.41 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 \\
-  1 &   3 &  10 & -386102.49 & -13.44 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 \\
-  \hline                                            
-  \hline                                            
-  2 &   1 &   0 & -382386.80 & -13.23 & 6.93 & 5.98 & 6.00 & 6.00 & 7.00 & 6.00 \\
-  2 &   1 &   1 & -382471.59 & -13.26 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
-  2 &   1 &  10 & -372856.10 & -13.67 & 5.85 & 5.00 & 5.00 & 5.00 & 6.00 & 5.00 \\
-  \hline                                            
-  2 &   2 &   0 & -382604.40 & -13.22 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
-  2 &   2 &   1 & -382830.00 & -13.23 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
-  2 &   2 &  10 & -382426.58 & -13.24 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
-  \hline                                            
-  2 &   3 &   0 & -382570.63 & -13.22 & 6.91 & 6.00 & 6.00 & 6.00 & 7.00 & 6.00 \\
-  2 &   3 &   1 & -382393.45 & -13.25 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
-  2 &   3 &  10 & -367326.52 & -13.68 & 5.76 & 5.00 & 5.00 & 5.00 & 6.00 & 5.00 \\
-  \hline                                            
-  \hline                                            
-  3 &   1 &   0 & -456420.34 & -12.85 & 6.96 & 5.99 & 6.00 & 6.00 & 7.00 & 6.00 \\
-  3 &   1 &   1 & -457004.33 & -12.86 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
-  3 &   1 &  10 & -456787.63 & -12.81 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
-  \hline                                            
-  3 &   2 &   0 & -456751.40 & -12.84 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
-  3 &   2 &   1 & -456254.13 & -12.82 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
-  3 &   2 &  10 & -390085.06 & -13.34 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 \\
-  \hline                                            
-  3 &   3 &   0 & -456246.13 & -12.81 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
-  3 &   3 &   1 & -429226.36 & -13.18 & 5.62 & 5.00 & 5.00 & 5.00 & 6.00 & 5.00 \\
-  3 &   3 &  10 & -390532.99 & -13.31 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 \\
+  a) &   1 &   1 &   0 & -781118.53 & -18.22 & 5.00 & 5.00 & 6.00 & 6.00 & 5.15 & 5.77 \\
+  b) &   1 &   1 &   1 & -780253.61 & -18.20 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 \\
+  c) &   1 &   1 &  10 & -878131.60 & -17.72 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  \hline
+  d) &   1 &   2 &   0 & -877944.78 & -17.75 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  e) &   1 &   2 &   1 & -879072.72 & -17.73 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  f) &   1 &   2 &  10 & -780334.99 & -18.21 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 \\
+  \hline
+  g) &   1 &   3 &   0 & -781079.80 & -18.21 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 \\
+  h) &   1 &   3 &   1 & -780999.12 & -18.20 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 \\
+  i) &   1 &   3 &  10 & -878139.99 & -17.75 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  \hline\hline
+  j) &   2 &   1 &   0 & -861980.28 & -18.15 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 \\
+  k) &   2 &   1 &   1 & -793929.95 & -18.48 & 5.00 & 4.00 & 5.00 & 4.00 & 5.00 & 4.00 \\
+  l) &   2 &   1 &  10 & -861537.43 & -18.18 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 \\
+  \hline
+  m) &   2 &   2 &   0 & -921424.46 & -17.87 & 7.00 & 6.00 & 7.00 & 6.00 & 6.99 & 6.00 \\
+  n) &   2 &   2 &   1 & -794848.92 & -18.47 & 5.00 & 4.00 & 5.00 & 4.00 & 5.00 & 4.00 \\
+  o) &   2 &   2 &  10 & -921825.37 & -17.88 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  \hline
+  p) &   2 &   3 &   0 & -861615.02 & -18.18 & 5.00 & 6.00 & 6.00 & 6.00 & 5.04 & 6.00 \\
+  q) &   2 &   3 &   1 & -794300.71 & -18.47 & 5.00 & 4.00 & 5.00 & 4.00 & 5.00 & 4.00 \\
+  r) &   2 &   3 &  10 & -682542.83 & -18.87 & 4.00 & 4.00 & 4.00 & 4.00 & 4.00 & 4.00 \\
+  \hline\hline
+  s) &   3 &   1 &   0 & -763241.45 & -18.20 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  t) &   3 &   1 &   1 & -763658.98 & -18.21 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 \\
+  u) &   3 &   1 &  10 & -676237.65 & -18.61 & 5.00 & 4.00 & 5.00 & 4.00 & 5.00 & 4.00 \\
+  \hline
+  v) &   3 &   2 &   0 & -851310.67 & -17.79 & 7.00 & 6.00 & 7.00 & 6.00 & 7.00 & 6.00 \\
+  w) &   3 &   2 &   1 & -557653.90 & -19.06 & 4.00 & 4.00 & 4.00 & 4.00 & 4.00 & 4.00 \\
+  x) &   3 &   2 &  10 & -851130.61 & -17.80 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
+  \hline
+  y) &   3 &   3 &   0 & -764177.86 & -18.21 & 6.00 & 6.00 & 6.00 & 6.00 & 6.00 & 6.00 \\
+  z) &   3 &   3 &   1 & -763702.20 & -18.21 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 & 5.00 \\
+  $\alpha$ &   3 &   3 &  10 & -851580.44 & -17.78 & 6.00 & 5.00 & 6.00 & 5.00 & 6.00 & 5.00 \\
   \hline
 \end{tabular}
 \end{table}
