made reminder to add miss mech

--- a/runs/sim-study/notes/test-sim-6-6/test-sim-6-6.tex
+++ b/runs/sim-study/notes/test-sim-6-6/test-sim-6-6.tex
@@ -371,6 +371,10 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
 \label{tab:metrics}
 \end{table}
 
+\newpage
+\section{Missing Mechanism}
+TODO: Include missing mechanisms
+
 
 % Uncomment if using bibliography:
 % \bibliography{bib}
