--- a/runs/sim-study/notes/test-sim-6-7-4/test-sim-6-7-4.tex
+++ b/runs/sim-study/notes/test-sim-6-7-4/test-sim-6-7-4.tex
@@ -211,9 +211,18 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{Z1.pdf}{.2}
   \end{center}
-  \caption{Note that subpopulation 3 for $Z_1$ and subpopulation 1 for $Z_2$
-  each contain two subpopulations. Also note that the columns in $Z$ are different.}
-  \label{fig:yzest}
+  \caption{Note that for temperatures (6, 7), (11, 12), (13, 14), and (18, 19),
+  the $Z$ matrices are different. Swapping does not occur between those chains.
+  Swapping would occur for those chains if the ratio between the larger and smaller
+  temperatures were about 1.001. To smoothly transition between $\tau=1$ and
+  $\tau=2$ with a temperature granularity of that order would require 700 parallel
+  chains. Note also the merging of two of at least the original features in all of
+  the scenarios. The merging of two features is reasonable given the size of
+  the simulated data. Sometimes Feature 1 is merged into Feature 3, at other times,
+  Feature 2 is merged into Feature 3. The merging of three features is more
+  prevalent in higher temperatures. Features 1 and 2 were merged into Feature 3
+  in those cases. Since Features 1, 2, and 3 are similar, this is conceivable.}
+  \label{fig:z1est}
 \end{figure}
 
 \newpage
@@ -222,9 +231,7 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{Z2.pdf}{.2}
   \end{center}
-  \caption{Note that subpopulation 3 for $Z_1$ and subpopulation 1 for $Z_2$
-  each contain two subpopulations. Also note that the columns in $Z$ are different.}
-  \label{fig:yzest}
+  \label{fig:z2est}
 \end{figure}
 
 \newpage
@@ -233,9 +240,12 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{y1.pdf}{.2}
   \end{center}
-  \caption{Note that subpopulation 3 for $Z_1$ and subpopulation 1 for $Z_2$
-  each contain two subpopulations. Also note that the columns in $Z$ are different.}
   \label{fig:yzest}
+  \caption{Note the merging of two of at least the original features in all of
+  the scenarios. The merging of two features is reasonable given the size of
+  the simulated data. The merging of tree features is more prevalent in higher
+  temperatures. Features 1 and 2 were merged into Feature 3 in those
+  cases.}
 \end{figure}
 
 \newpage
@@ -244,8 +254,6 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
   \begin{center}  % 6 x 5
     \imgtemplate{y2.pdf}{.2}
   \end{center}
-  \caption{Note that subpopulation 3 for $Z_1$ and subpopulation 1 for $Z_2$
-  each contain two subpopulations. Also note that the columns in $Z$ are different.}
   \label{fig:yzest}
 \end{figure}
 
@@ -257,7 +265,12 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
     \imgtemplate{mus_trace.pdf}{.2}
   \end{center}
   \label{fig:mustrace}
-  \caption{}
+  \caption{Note that for temperatures (6, 7), (11, 12), (13, 14), and (18, 19),
+  the $Z$ matrices are different. Swapping does not occur between those chains.
+  Swapping would occur for those chains if the ratio between the larger and smaller
+  temperatures were about 1.001. To smoothly transition between $\tau=1$ and
+  $\tau=2$ with a temperature granularity of that order would require 700 parallel
+  chains.}
 \end{figure}
 
 \newpage
@@ -267,7 +280,12 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
     \imgtemplate{mus.pdf}{.2}
   \end{center}
   \label{fig:mus}
-  \caption{}
+  \caption{Note that for temperatures (6, 7), (11, 12), (13, 14), and (18, 19),
+  the $Z$ matrices are different. Swapping does not occur between those chains.
+  Swapping would occur for those chains if the ratio between the larger and smaller
+  temperatures were about 1.001. To smoothly transition between $\tau=1$ and
+  $\tau=2$ with a temperature granularity of that order would require 700 parallel
+  chains.}
 \end{figure}
 
 \newpage
@@ -277,7 +295,12 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
     \imgtemplate{sig2_trace.pdf}{.2}
   \end{center}
   \label{fig:sig2trace}
-  \caption{}
+  \caption{Note that for temperatures (6, 7), (11, 12), (13, 14), and (18, 19),
+  the $Z$ matrices are different. Swapping does not occur between those chains.
+  Swapping would occur for those chains if the ratio between the larger and smaller
+  temperatures were about 1.001. To smoothly transition between $\tau=1$ and
+  $\tau=2$ with a temperature granularity of that order would require 700 parallel
+  chains.}
 \end{figure}
 
 \newpage
@@ -287,7 +310,12 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
     \imgtemplate{sig2.pdf}{.2}
   \end{center}
   \label{fig:sig2}
-  \caption{}
+  \caption{Note that for temperatures (6, 7), (11, 12), (13, 14), and (18, 19),
+  the $Z$ matrices are different. Swapping does not occur between those chains.
+  Swapping would occur for those chains if the ratio between the larger and smaller
+  temperatures were about 1.001. To smoothly transition between $\tau=1$ and
+  $\tau=2$ with a temperature granularity of that order would require 700 parallel
+  chains.}
 \end{figure}
 
 
@@ -312,7 +340,6 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
     \end{tabular}
   \end{center}
   \label{fig:dd11}
-  \caption{}
 \end{figure}
  
 % \newpage
@@ -325,7 +352,6 @@ $Z$ and $W$ used to generate the simulated data in this study. Note the followin
     \end{tabular}
   \end{center}
 \label{fig:sigtrace}
-\caption{}
 \end{figure}
 
 
